k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
       
        image: 703216717940.dkr.ecr.us-east-1.amazonaws.com/gitops-webapp:backend-9409c407a38f911ec80eaaba84aeaae1ec516ce4
        ports:
        - containerPort: 5000
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000







    #hello
    #hh
    ##kkk
    #hhh
