k8s/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image-signature
  annotations:
    policies.kyverno.io/title: Verify Image Signature
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: verify-signature
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "*"
        attestations:
        - predicateType: cosign.sigstore.dev/attestation/v1
        key: |-
          -----BEGIN PUBLIC KEY-----
          MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEvrEYd5o5eap0Bb2yAsyxZIf4O3LZ
[...]
          -----END PUBLIC KEY-----



#dd
